--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,3 @@
-# .github/workflows/github-actions-demo.yml
-
 name: GitHub Actions Demo
 
 on:
@@ -13,12 +11,17 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Print Hello World
-        run: echo "Hello World"
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
 
-      - name: Print Current Date
+      - name: Execute Python Script
+        run: python job.py
+
+      - name: Install Dependencies and Run Tests
         run: |
-          echo "Current Date:"
-          date
+          python -m pip install -r requirements.txt
+          pytest
