--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: '3.x'
 
       - name: Execute Python Script
-        run: python /github/workspace/job.py
+        run: python /.github/workflows/job.py
 
       - name: Install Dependencies and Run Tests
         run: |
